# gerona

cslibs_navigation_utilities/: CMakeLists.txt  README.md  package.xml
cslibs_navigation_utilities/.github/workflows/: catkin_make_isolated.yaml
cslibs_navigation_utilities/include/cslibs_navigation_utilities/: CircleEstimator.h
cslibs_navigation_utilities/src/: CircleEstimator.cpp  ConfigFileReader.cpp  CvContourManipulator.cpp  CvMathHelper.cpp  EggTimer.cpp  EigenTools.cpp  Graphics.cpp  LaserTo3DTransformation.cpp  Line2d.cpp  Line2dSegment.cpp  LogCollector.cpp  LowPassFilter.cpp  MathHelper.cpp  Misc.cpp  Path.cpp  RamaxxException.cpp  Stopwatch.cpp  Strings.cpp  runningstat.cpp
navigation_launch/launch/: simple_follower.launch
path_control/: CMakeLists.txt
path_control/launch/: highlevel_dummy.launch
path_control/src/: highlevel_dummy_node.cpp
path_follower/include/path_follower/controller/: robotcontroller_PBR.h  (+3 more)
path_follower/launch/: follower.launch  follower_PBR.launch  follower_ackermann_purepursuit.launch  follower_differential_orthexp.launch  follower_kinematic_SLP.launch  follower_unicycle_inputscaling.launch
path_follower/src/: path_follower_server.cpp  pathfollower.cpp
path_follower/src/controller/: robotcontroller_PBR.cpp  robotcontroller_ackermann_purepursuit.cpp  robotcontroller_kinematic_SLP.cpp  robotcontroller_unicycle_inputscaling.cpp
path_follower/src/factory/: collision_avoider_factory.cpp
path_follower/src/local_planner/: abstract_local_planner.cpp
path_follower/src/utils/: extended_kalman_filter.cpp
(+2 files in other folders)
